@@ -1,11 +1,27 @@
 import Dependencies.*
+import BNFC.*
 
 val scala3Version       = "3.3.0"
 val scala2Version       = "2.13.10"
 lazy val commonSettings = Seq(
-  organization := "io.rhonix",
-  version      := "0.1.0-SNAPSHOT",
-//  scalafmtOnCompile := !sys.env.contains("CI"), // Format on compile, disable in CI environments
+  organization      := "io.rhonix",
+  version           := "0.1.0-SNAPSHOT",
+  scalafmtOnCompile := !sys.env.contains("CI"), // Format on compile, disable in CI environments
+
+  // Java 17+ has more restrictive policy for access to JDK internals.
+  // Without the following java options liquibase library does not work properly
+  // and tests fail with "java.base does not "opens java.lang" to unnamed module @4b8f7a19"
+  // Please see https://dev.java/learn/modules/add-exports-opens/
+  // NOTE: this does not help with running tests in IntelliJ, so
+  // to run such tests in IntelliJ this argument has to be added explicitly.
+  javaOptions ++= Seq(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  ),
+  Test / fork               := true,
+  Test / parallelExecution  := false,
+  Test / testForkedParallel := false,
 )
 
 lazy val settingsScala3 = commonSettings ++ Seq(
@@ -24,7 +40,7 @@ lazy val settingsScala2 = commonSettings ++ Seq(
 
 lazy val rhonix = (project in file("."))
   .settings(commonSettings*)
-  .aggregate(sdk, weaver, dproc, db, node)
+  .aggregate(sdk, macros, weaver, dproc, db, node, rholang, legacy, sim, diag, execution, api)
 
 lazy val sdk = (project in file("sdk"))
 //  .settings(settingsScala3*) // Not supported in IntelliJ Scala plugin
@@ -36,7 +52,7 @@ lazy val sdk = (project in file("sdk"))
 // Database interfaces implementation
 lazy val db = (project in file("db"))
   .settings(settingsScala2*)
-  .settings(libraryDependencies ++= Seq(catsCore, catsEffect) ++ dbLibs ++ tests)
+  .settings(libraryDependencies ++= Seq(catsCore, catsEffect) ++ dbLibs ++ tests ++ log)
   .dependsOn(sdk)
 
 // Consensus
@@ -124,3 +140,52 @@ lazy val sim = (project in file("sim"))
     },
   )
   .dependsOn(node, api, db)
+
+// Rholang implementation
+lazy val rholang = (project in file("rholang"))
+  .settings(settingsScala2*)
+  .settings(bnfcSettings*)
+  .settings(libraryDependencies ++= common ++ tests :+ protobuf :+ bouncyProvCastle)
+  // TODO Matching the rholang object should be always exhaustive. Remove when done.
+  .settings(scalacOptions ++= Seq("-Xlint:-strict-unsealed-patmat", "-Xnon-strict-patmat-analysis"))
+  .dependsOn(sdk % "compile->compile;test->test")
+
+import protocbridge.Target
+// Legacy implementation (rholang + rspace)
+lazy val legacy = (project in file("legacy"))
+  .settings(settingsScala2*)
+  .enablePlugins(Fs2Grpc)
+  .settings(
+    scalacOptions ~= { options =>
+      options.filterNot(Set("-Xfatal-warnings", "-Ywarn-unused:imports")) ++ Seq(
+        "-Xlint:-strict-unsealed-patmat",
+        "-Xnon-strict-patmat-analysis",
+        "-Wconf:cat=deprecation:ws", // suppress deprecation warnings
+        "-Xlint:-missing-interpolator" // Disable false positive strings containing ${...}
+      )
+    },
+    Compile / compile / wartremoverErrors ~= {
+      _.filterNot(Seq(Wart.SeqApply, Wart.Throw, Wart.Var, Wart.SeqUpdated).contains)
+    },
+    scalapbCodeGenerators := Seq(
+      new Target(
+        gen(flatPackage = true)._1,
+        (Compile / sourceManaged).value,
+        gen(flatPackage = true)._2
+      )),
+    libraryDependencies ++= common ++ tests ++ legacyLibs,
+    resolvers += ("jitpack" at "https://jitpack.io"),
+  )
+  .dependsOn(sdk, rholang, macros) // depends on new rholang implementation
+
+// Macro implementation should be compiled before macro application
+// https://stackoverflow.com/questions/75847326/macro-implementation-not-found-scala-2-13-3
+lazy val macros = (project in file("macros"))
+  .settings(settingsScala2*)
+  .settings(
+    libraryDependencies ++= common ++ legacyLibs,
+    resolvers ++=
+      // for kalium
+      Resolver.sonatypeOssRepos("releases") ++
+        Resolver.sonatypeOssRepos("snapshots") :+ ("jitpack" at "https://jitpack.io"),
+  )
